Bevel Tool doesn't respect the scale of the units of the scene #69639

Closed
opened 2019-09-08 17:37:55 +02:00 by Alberto Velázquez · 17 comments

Broken: 2.80 official and 2.81 beta 8-September-2019

If you change the units of the scene with a change in the multiplier, for example 0,01 instead of 1, when you make a bevel with the modal tool the width and other units of the tool in the info bar are not in the correct scale and keep the scale of the default scene.

Example, scene with 0.01 and units in cm

Bevel in the info bar 32,7cm
image.png

Bevel in the redo panel 0,327cm
image.png

Broken: 2.80 official and 2.81 beta 8-September-2019 If you change the units of the scene with a change in the multiplier, for example 0,01 instead of 1, when you make a bevel with the modal tool the width and other units of the tool in the info bar are not in the correct scale and keep the scale of the default scene. Example, scene with 0.01 and units in cm Bevel in the info bar 32,7cm ![image.png](https://archive.blender.org/developer/F7775056/image.png) Bevel in the redo panel 0,327cm ![image.png](https://archive.blender.org/developer/F7775058/image.png)

Added subscriber: @AlbertoVelazquez

Added subscriber: @AlbertoVelazquez

Added subscriber: @mano-wii

Added subscriber: @mano-wii

If I'm not mistaken, the bevel tool works with a factor.
Do you have a simple file that helps investigate the problem?

If I'm not mistaken, the bevel tool works with a factor. Do you have a simple file that helps investigate the problem?

It have the units, meters by default, after the width, offset and depth modes.

For example, with a scene with 0.01 in unit scale if you do any bevel in the default cube you will see 32.7 centimeters

image.png

But in the panel to retouch last action you have 0.327 centimeters

image.png

It have the units, meters by default, after the width, offset and depth modes. For example, with a scene with 0.01 in unit scale if you do any bevel in the default cube you will see 32.7 centimeters ![image.png](https://archive.blender.org/developer/F7774920/image.png) But in the panel to retouch last action you have 0.327 centimeters ![image.png](https://archive.blender.org/developer/F7774923/image.png)

Where do you add this multiplier?
I tested it here by changing the Unit Scale and the Width property of the tool changes as expected.

Where do you add this multiplier? I tested it here by changing the `Unit Scale` and the `Width` property of the tool changes as expected.

In units

image.png

In units ![image.png](https://archive.blender.org/developer/F7774998/image.png)

I honestly see no problem here.
The value indicated in Width changes according to the multiplier.
So it seems right to me.

I honestly see no problem here. The value indicated in Width changes according to the multiplier. So it seems right to me.

how could not be a problem than a bevel of 32,7cm in the info bar give me a bevel of 0,32cm in the real scene? Both have to show 0,327cm, the correct value

how could not be a problem than a bevel of 32,7cm in the info bar give me a bevel of 0,32cm in the real scene? Both have to show 0,327cm, the correct value

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Germano Cavalcante self-assigned this 2019-09-25 20:46:30 +02:00

This works as intended for all properties that use units.
If you scaled the unit this means that you want this change to be reflected for all properties that use this unit.
It is not a bug.

This works as intended for all properties that use units. If you scaled the unit this means that you want this change to be reflected for all properties that use this unit. It is not a bug.

Let's see, if that's what I'm telling you, it doesn't apply the multiplier to the operation information.

Let's see if you can explain it to me... why a 32,7 cm goes out there and magically becomes 0,327 when you click complete the operation.

Let's see, if that's what I'm telling you, it doesn't apply the multiplier to the operation information. Let's see if you can explain it to me... why a 32,7 cm goes out there and magically becomes 0,327 when you click complete the operation.

Please describe the problem further when making a report.
And there is no this "jump" you mentioned:
GIF.gif

By the way, 0,327 m is 32,7 cm.
If that's the problem, it's nothing related to bevel.

Please describe the problem further when making a report. And there is no this "jump" you mentioned: ![GIF.gif](https://archive.blender.org/developer/F7775054/GIF.gif) By the way, `0,327 m` is `32,7 cm`. If that's the problem, it's nothing related to bevel.

The problem is really clear if you try what I show you, see the bevel value in the STATUS BAR and compare with the value in the REDO PANEL, are not the same.

The problem is really clear if you try what I show you, see the bevel value in the STATUS BAR and compare with the value in the REDO PANEL, are not the same.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Hmm, now I understand the problem.
Basically the value indicated in the info bar does not correspond to the system unit.

Hmm, now I understand the problem. Basically the value indicated in the info bar does not correspond to the system unit.

This issue was referenced by f9d7f690b2

This issue was referenced by f9d7f690b2407fc069339181f957d270dfd921a2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69639
No description provided.