Fix T69639: Bevel Info bar Width value not affected by Unit Scale